--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "axios": "^1.6.5",
         "date-fns": "^3.2.0",
         "framer-motion": "^10.18.0",
+        "jspdf": "^4.0.0",
+        "jspdf-autotable": "^5.0.7",
         "lightweight-charts": "^4.1.3",
         "lucide-react": "^0.454.0",
+        "papaparse": "^5.5.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.3",
