--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@emotion/styled": "^11.11.0",
         "@splinetool/react-spline": "^2.2.6",
         "@splinetool/runtime": "^1.0.42",
+        "@supabase/supabase-js": "^2.90.0",
         "@tailwindcss/vite": "^4.1.18",
         "antd": "^5.13.2",
         "axios": "^1.6.5",
