--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@google/generative-ai": "^0.24.1",
         "@splinetool/react-spline": "^2.2.6",
         "@splinetool/runtime": "^1.0.42",
         "@supabase/supabase-js": "^2.90.0",
